refactor: tasknotes custom plugin and add colored icons